Fix button content alignment

--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -20,7 +20,7 @@
     min-height: 24px;
     text-transform: capitalize;
   }
-  
+
   /* Responsive Design */
   @media (max-width: 600px) {
     .button {
@@ -45,6 +45,7 @@
   .button__wrapper {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     max-width: 300px;
     max-height: 36px;
   }
@@ -143,21 +144,21 @@
   .button--small {
     padding: 5px;
     font-size: 12px;
-    line-height: 9px;
+    /* line-height: 9px; */
     height: 24px;
   }
   
   .button--medium {
     padding: 10px;
     font-size: 13px;
-    line-height: 15px;
+    /* line-height: 15px; */
     height: 36px;
   }
   
   .button--large {
     padding: 14px;
     font-size: 14px;
-    line-height: 16px;
+    /* line-height: 16px; */
     height: 48px;
   }
   
